--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightBlue"
+    android:background="@color/baige"
     tools:context=".ImageActivity">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -12,7 +12,7 @@
         android:layout_height="275dp"
         android:layout_marginTop="1dp"
         android:id="@+id/my_recyclerView"
-        android:background = "@color/lightGray"
+        android:background = "@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,8 +25,9 @@
         android:layout_marginTop="25dp"
         android:layout_marginEnd="106dp"
         android:gravity="center"
-        android:text="Places"
-        android:textSize="20dp"
+        android:background="@color/white"
+        android:hint="Pick One:"
+        android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,12 +36,12 @@
     <ImageView
         android:id="@+id/my_displayImageView"
         android:layout_width="275dp"
-        android:layout_height="275dp"
+        android:layout_height="225dp"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="15dp"
         android:layout_marginEnd="65dp"
-        android:src="@drawable/australia"
+        android:layout_marginTop="7dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_displayTextView" />
 
