--- a/app/src/main/res/layout/grid_item_view.xml
+++ b/app/src/main/res/layout/grid_item_view.xml
@@ -10,6 +10,7 @@
         android:layout_height="150dp"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:paddingRight="5dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
