--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="lightGray">#d6d6d6</color>
     <color name="lightBlue">#abdbde</color>
+    <color name="baige">#faffc7</color>
+
 </resources>
